--- a/menu.html
+++ b/menu.html
@@ -12,7 +12,7 @@
 <header>
     <div class="container">
         <div class="header-menu">
-            <div class="logo" onclick="location.href='home.html';">
+            <div class="logo" onclick="location.href='index.html';">
                 <img src="svg/logo.svg" alt="logo">
             </div>
             <nav>
